# quadruped_robot

./: readme.txt
ROBOT_GUI/: FirstTab.ui  SecondTab.ui  ThirdTab.ui  main_window.ui  robot_gui.py
ROBOT_GUI/backup/: main_window.ui  robot_gui.py
quadruped_robot_description/: CMakeLists.txt  package.xml
quadruped_robot_description/launch/: display.launch  upload.launch
quadruped_robot_description/rviz/: qbot.rviz
quadruped_robot_description/urdf/: quadruped_robot.urdf  quadruped_robot.xacro.urdf
quadruped_robot_description/urdf/backup/: quadruped_robot.urdf
quadruped_robot_gazebo/: CMakeLists.txt  package.xml
quadruped_robot_gazebo/launch/: bringup.launch
quadruped_robot_gazebo/models/Q_BOT/: model.config  model.sdf
quadruped_robot_gazebo/src/: QRobot.cpp  QRobot.h  common.cpp  common.h  controller.cpp  controller.h  joystick.cc  joystick.h  plugin.cpp  robot_state.cpp  robot_state.h  trajectory.cpp  trajectory.h
quadruped_robot_gazebo/src/RBDL/addons/urdfreader/: CMakeLists.txt
quadruped_robot_gazebo/src/gain/: Gx.txt
quadruped_robot_gazebo/src/gain/WC3S/: Gi.txt  Gp.txt
quadruped_robot_gazebo/world/: default.world
quadruped_robot_gazebo/worlds/: default.world
